--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^17.0.0
   flutter_riverpod: ^3.1.0
   image_picker: ^1.2.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
