--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Приложению нужен доступ к геолокации для определения адреса доставки.</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>dgis</string>
+		<string>comgooglemaps</string>
+		<string>https</string>
+	</array>
 </dict>
 </plist>
